add div containers for images

--- a/chocolate-frontend/index.html
+++ b/chocolate-frontend/index.html
@@ -18,6 +18,14 @@
     <li><a id="chocolates" href="#">chocolates</a></li>
     <li><a id="pies" href="#">Pies</a></li>
     </ul>
+
+    <div id="chocolates-container">
+        <!-- images go here -->
+    </div>
+
+    <div id= "chocolate card">
+        <!-- show route -->
+    </div>
     
 </body>
 
