--- a/chocolate-frontend/index.html
+++ b/chocolate-frontend/index.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chococolate galore</title>
+    <title>Chococolate Galore</title>
     <script src="index.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
@@ -15,7 +16,7 @@
     <ul class="navbar">
     <li><a id="cakes" href="#">Cake</a></li>
     <li><a id="cookies" href="#">Cookies</a></li>
-    <li><a id="chocolates" href="#">chocolates</a></li>
+    <li><a id="chocolates" href="#">Chocolates</a></li>
     <li><a id="pies" href="#">Pies</a></li>
     </ul>
 
