add id to div class get object from api

--- a/chocolate-frontend/index.html
+++ b/chocolate-frontend/index.html
@@ -10,7 +10,7 @@
     
     <nav>
         <div class="logo">
-            <h2>chocolate box</h2>
+            <h2>Chocolate box</h2>
         </div>
     </nav>
     <ul class="navbar">
