--- a/chocolate-frontend/index.html
+++ b/chocolate-frontend/index.html
@@ -12,14 +12,15 @@
         <div class="logo">
             <h2>Chocolate box</h2>
         </div>
-    </nav>
-    <ul class="navbar">
+   
+    <ul class = "nav-links">
     <li><a id="cakes" href="#">Cake</a></li>
     <li><a id="cookies" href="#">Cookies</a></li>
     <li><a id="chocolates" href="#">Chocolates</a></li>
     <li><a id="pies" href="#">Pies</a></li>
+    <li><a id="recipeForm" href="#">Add recipe</a></li>
     </ul>
-
+    </nav>
     <div id="chocolates-container">
         <!-- chocolate cards go here -->
     </div>
