will allow user to see list of cakes

--- a/chocolate-frontend/index.html
+++ b/chocolate-frontend/index.html
@@ -14,7 +14,7 @@
         </div>
    
     <ul class = "nav-links">
-    <li><a id="cakes" href="#">Cake</a></li>
+    <li><a id="cakes" href="#" data-id = "1">Cake</a></li>
     <li><a id="cookies" href="#">Cookies</a></li>
     <li><a id="chocolates" href="#">Chocolates</a></li>
     <li><a id="pies" href="#">Pies</a></li>
