change id of li and added more objects to api

--- a/chocolate-frontend/index.html
+++ b/chocolate-frontend/index.html
@@ -18,7 +18,7 @@
     <li><a id="cakes" href="#" data-id = "1">Cake</a></li>
     <li><a id="cookies" href="#" data-id = "2">Cookies</a></li>
     <li><a id="chocolates" href="#" data-id = "3">Chocolates</a></li>
-    <li><a id="pies" href="#" data-id = "4">Pies</a></li>
+    <li><a id="ice-cream" href="#" data-id = "4">Ice cream</a></li>
         
     <!-- <li><a id="recipeForm" href="#">Add recipe</a></li> -->
     </ul>
