add form to add inventory and add styles to form

--- a/chocolate-frontend/index.html
+++ b/chocolate-frontend/index.html
@@ -25,7 +25,12 @@
      
     </ul>
     </nav>
-    <a id="recipeForm" href="#">Cart <span>0</span></a>
+    <a id="recipeForm" href="#">Add Inventory</a>
+
+    <div id = "recipe-Form">
+
+
+    </div>
     <div id="chocolates-container">
         <!-- chocolate cards go here -->
     </div>
